fixed auto-bold on mobile chrome

--- a/app/sass/_layout.scss
+++ b/app/sass/_layout.scss
@@ -1,7 +1,3 @@
-html { 
-	-webkit-text-size-adjust: none;
-}
-
 .header-wrapper {
 	@include outer-container();
 	.header-container {
